Delete IllegalBookingStateException.java