@@ -1,19 +1,18 @@
 package com.kiroule.campsite.booking.api.exception.advice;
 
+import static java.time.LocalDateTime.now;
 import static org.springframework.core.Ordered.HIGHEST_PRECEDENCE;
+import static org.springframework.http.HttpStatus.*;
 
 import com.kiroule.campsite.booking.api.contract.v2.error.ApiError;
 import com.kiroule.campsite.booking.api.exception.BookingDatesNotAvailableException;
 import com.kiroule.campsite.booking.api.exception.BookingNotFoundException;
-import com.kiroule.campsite.booking.api.exception.IllegalBookingStateException;
-import java.time.LocalDateTime;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.StaleObjectStateException;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -35,46 +34,42 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
   @ExceptionHandler(BookingNotFoundException.class)
   protected ResponseEntity<Object> handleBookingNotFound(BookingNotFoundException ex) {
 
-    var apiError = ApiError.builder()
-        .timestamp(LocalDateTime.now())
-        .status(HttpStatus.NOT_FOUND)
-        .message(ex.getMessage())
-        .build();
+    var apiError =
+        ApiError.builder().timestamp(now()).status(NOT_FOUND).message(ex.getMessage()).build();
     return buildResponseEntity(apiError);
   }
 
-  @ExceptionHandler({IllegalBookingStateException.class,
-      BookingDatesNotAvailableException.class,
-      IllegalArgumentException.class})
+  @ExceptionHandler({BookingDatesNotAvailableException.class, IllegalArgumentException.class})
   protected ResponseEntity<Object> handleBookingDatesNotAvailable(RuntimeException ex) {
 
-    var apiError = ApiError.builder()
-        .timestamp(LocalDateTime.now())
-        .status(HttpStatus.BAD_REQUEST)
-        .message(ex.getMessage())
-        .build();
+    var apiError =
+        ApiError.builder().timestamp(now()).status(BAD_REQUEST).message(ex.getMessage()).build();
     return buildResponseEntity(apiError);
   }
 
   @Override
   public ResponseEntity<Object> handleMethodArgumentNotValid(
-          MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+      MethodArgumentNotValidException ex,
+      HttpHeaders headers,
+      HttpStatusCode status,
+      WebRequest request) {
 
-    var subErrors = ex.getBindingResult().getFieldErrors()
-        .stream()
-        .map(DefaultMessageSourceResolvable::getDefaultMessage)
-        .collect(Collectors.toList());
-    subErrors.addAll(ex.getBindingResult().getGlobalErrors()
-        .stream()
-        .map(DefaultMessageSourceResolvable::getDefaultMessage)
-        .toList());
+    var subErrors =
+        ex.getBindingResult().getFieldErrors().stream()
+            .map(DefaultMessageSourceResolvable::getDefaultMessage)
+            .collect(Collectors.toList());
+    subErrors.addAll(
+        ex.getBindingResult().getGlobalErrors().stream()
+            .map(DefaultMessageSourceResolvable::getDefaultMessage)
+            .toList());
 
-    var apiError = ApiError.builder()
-        .timestamp(LocalDateTime.now())
-        .status(HttpStatus.BAD_REQUEST)
-        .message("Validation error")
-        .subErrors(subErrors)
-        .build();
+    var apiError =
+        ApiError.builder()
+            .timestamp(now())
+            .status(BAD_REQUEST)
+            .message("Validation error")
+            .subErrors(subErrors)
+            .build();
 
     log.error("Validation error for {}", ex.getBindingResult().getTarget());
     return buildResponseEntity(apiError);
@@ -82,16 +77,22 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
 
   @Override
   public ResponseEntity<Object> handleHttpMessageNotReadable(
-          HttpMessageNotReadableException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+      HttpMessageNotReadableException ex,
+      HttpHeaders headers,
+      HttpStatusCode status,
+      WebRequest request) {
     var servletWebRequest = (ServletWebRequest) request;
-    log.info("{} to {}", servletWebRequest.getHttpMethod(),
+    log.info(
+        "{} to {}",
+        servletWebRequest.getHttpMethod(),
         servletWebRequest.getRequest().getServletPath());
 
-    var apiError = ApiError.builder()
-        .timestamp(LocalDateTime.now())
-        .status(HttpStatus.BAD_REQUEST)
-        .message("Malformed JSON request")
-        .build();
+    var apiError =
+        ApiError.builder()
+            .timestamp(now())
+            .status(BAD_REQUEST)
+            .message("Malformed JSON request")
+            .build();
 
     return buildResponseEntity(apiError);
   }
@@ -99,11 +100,12 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
   @ExceptionHandler(StaleObjectStateException.class)
   public ResponseEntity<Object> handleStaleObjectStateException(StaleObjectStateException ex) {
 
-    var apiError = ApiError.builder()
-        .timestamp(LocalDateTime.now())
-        .status(HttpStatus.CONFLICT)
-        .message("Optimistic locking error - booking was updated by another transaction")
-        .build();
+    var apiError =
+        ApiError.builder()
+            .timestamp(now())
+            .status(CONFLICT)
+            .message("Optimistic locking error - booking was updated by another transaction")
+            .build();
 
     return buildResponseEntity(apiError);
   }
@@ -111,5 +113,4 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
   private ResponseEntity<Object> buildResponseEntity(ApiError apiError) {
     return new ResponseEntity<>(apiError, apiError.getStatus());
   }
-
 }
